fixed alignment of links, gradient, in mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,27 +34,8 @@ td {
 
 /* mobile version of sidenav, sidenav occupies top of viewport */
 .sidenav {
-  background: linear-gradient(to right, #fff2c1, white);
+  background: linear-gradient(#fff2c1, white);
   padding-top: 20px;
-}
-
-/* desktop version of sidenav, sidenav takes up left 20% of viewport */
-@media screen and (min-width: 48em) {
-  .sidenav {
-    height: 100%; 
-    width: 20%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-    z-index: 1;
-  }
-
-  /* below code isn't running for some reason */
-  .social-media-icons {
-    margin: 50% 0% 0% 0%;
-  }
 }
 
 .title {
@@ -94,9 +75,28 @@ td {
 }
 
 .social-media-icons {
-  margin: 5% 0% 0% 0%;
-  width: 90%;
+  margin: 5% 0%;
+  width: 100%;
   text-align: center;
+}
+
+/* desktop version of sidenav, sidenav takes up left 20% of viewport */
+@media screen and (min-width: 1000px) {
+  .sidenav {
+    background: linear-gradient(to right, #fff2c1, white);
+    height: 100%; 
+    width: 20%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+    z-index: 1;
+  }
+
+  .social-media-icons {
+    margin: 50% 0% 5% 0%;
+  }
 }
 
 .fab {
